--- a/catalog.html
+++ b/catalog.html
@@ -17,7 +17,10 @@
       </form>
       <ul class="page-header__profile">
         <li class="page-header__profile-item">
-          <a href="" class="page-header__profile-link page-header__profile-link_sign-in">Войти</a>
+          <a href="" class="page-header__profile-link page-header__profile-link_sign-in">Валентин Петухов</a>
+        </li>
+        <li class="page-header__profile-item">
+          <a href="" class="page-header__profile-link page-header__profile-link_log-out">Выйти</a>
         </li>
       </ul>
       <ul class="page-header__options">
@@ -91,8 +94,8 @@
             <li class="products__sort-list-item"><a href="#" class="products__sort-list-link">По популярности</a></li>
           </ul>
           <div class="products__sort-type">
-            <a href="#" class="products__sort-type-icon products__sort-up">Сортировка по возрастанию</a>
-            <a href="#" class="products__sort-type-icon products__sort-down">Сортировка по убыванию</a>
+            <a href="#" class="products__sort-type-icon products__sort-type-icon_up">Сортировка по возрастанию</a>
+            <a href="#" class="products__sort-type-icon products__sort-type-icon_down">Сортировка по убыванию</a>
           </div>
         </section>
       </div>
