Fixes and improvements after a CR.

--- a/catalog.html
+++ b/catalog.html
@@ -9,7 +9,7 @@
 <body>
 <header class="page-header page-header_catalog container">
   <div class="page-header-wrapper">
-    <h1 class="page-header__logo">Device</h1>
+    <h1 class="page-header__logo"><a href="index.html">Device</a></h1>
     <div class="page-header__actions">
       <form action="/" class="search-form page-header__search">
         <input type="search" class="search-form__field" placeholder="Поиск по сайту">
@@ -78,7 +78,7 @@
       <ul class="breadcrumbs-list">
         <li class="breadcrumbs-item"><a href="index.html" class="breadcrumbs-link">Главная</a></li>
         <li class="breadcrumbs-item"><a href="#" class="breadcrumbs-link">Каталог товаров</a></li>
-        <li class="breadcrumbs-item"><a href="#" class="breadcrumbs-link">Моноподы для селфи</a></li>
+        <li class="breadcrumbs-item">Моноподы для селфи</li>
       </ul>
     </article>
   </div>
@@ -115,8 +115,8 @@
                 <div class="range-control__toggle range-control__toggle_max"></div>
               </div>
               <div class="range-control__selected-price">
-                <input class="range-control__selected-price-min" type="text" name="min" id="min" placeholder="От 0">
-                <input class="range-control__selected-price-max" type="text" name="max" id="max" placeholder="От 5000">
+                От <input class="range-control__selected-price-min" type="text" name="min" id="min" value="0">
+                до <input class="range-control__selected-price-max" type="text" name="max" id="max" value="5000">
               </div>
             </fieldset>
             <fieldset class="products__items-filter-container">
