--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
     <nav class="page-header__nav">
       <ul class="page-header__nav-list">
         <li class="page-header__nav-item">
-          <a href="catalog.html" class="page-header__nav-link">Каталог товаров</a>
+          <a href="#" class="page-header__nav-link">Каталог товаров</a>
           <ul class="page-header__nav-goods">
             <li class="page-header__nav-goods-item">
               <a class="page-header__nav-goods-link" href="#">Виртуальная реальность</a>
@@ -44,7 +44,7 @@
               <a class="page-header__nav-goods-link" href="#">Квадрокоптеры</a>
             </li>
             <li class="page-header__nav-goods-item">
-              <a class="page-header__nav-goods-link" href="#">Моноподы для селфи</a>
+              <a class="page-header__nav-goods-link" href="catalog.html">Моноподы для селфи</a>
             </li>
             <li class="page-header__nav-goods-item">
               <a class="page-header__nav-goods-link" href="#">Умные часы</a>
@@ -312,7 +312,7 @@
           проверить работоспособность покупки. Всякое бывает.</p>
         <div class="company-info__contacts-map">
           <a href="#">
-            <img src="img/map.jpg"  width="560" height="222" alt="улица Строителей, 15">
+            <img src="img/map.png"  width="560" height="222" alt="улица Строителей, 15">
           </a>
         </div>
         <a class="btn-device company-info__contacts-btn">Напишите нам</a>
@@ -407,7 +407,7 @@
   <div class="modal-map__container">
     <h2 class="visually-hidden modal-map__container-title">Как до нас добраться</h2>
     <p class="modal-map__container-map-no-js">
-      <img src="img/map.jpg" width="560" height="222" alt="Наш офис по адресу ул. Хуббы-буббы дом 1 ОАО 'Академия ХТМЛ'">
+      <img src="img/map.png" width="560" height="220" alt="Наш офис по адресу ул. Хуббы-буббы дом 1 ОАО 'Академия ХТМЛ'">
     </p>
     <div class="modal-map__yandex-map" id="yandex-map"></div>
   </div>
