Fixes for extra requirements.

--- a/catalog.html
+++ b/catalog.html
@@ -179,7 +179,7 @@
             <figure class="products__items-item-container">
               <img src="img/item-2.jpg" width="360" height="380" alt="Профессиональная селфи-палка">
               <figcaption class="products__items-item-description">
-                <a href="#" class="products__items-item-link">Профессиональная <br>селфи-палка</a>
+                <a href="#" class="products__items-item-link">Профессиональная селфи-палка</a>
                 <span class="products__items-item-price">1 500 руб.</span>
               </figcaption>
             </figure>
