--- a/index.html
+++ b/index.html
@@ -315,7 +315,7 @@
             <img src="img/map.png"  width="560" height="222" alt="улица Строителей, 15">
           </a>
         </div>
-        <a class="btn-device company-info__contacts-btn">Напишите нам</a>
+        <a href="feedback.html" class="btn-device company-info__contacts-btn">Напишите нам</a>
       </section>
     </div>
   </div>
@@ -323,7 +323,7 @@
 <footer class="page-footer">
   <div class="container">
     <div class="page-footer__info">
-      <a href="#" class="logotype page-footer__info-logotype">Device</a>
+      <a href="map.html" class="logotype page-footer__info-logotype">Device</a>
       <address class="page-footer__info-address">г. Москва, ул. Строителей, 15</address>
     </div>
     <div class="page-footer__menu">
