Catalog pagination bar update.

--- a/catalog.html
+++ b/catalog.html
@@ -89,7 +89,7 @@
         <section class="products__sort">
           <h2 class="products__sort-title">Сортировка</h2>
           <ul class="products__sort-list">
-            <li class="products__sort-list-item"><a href="#" class="products__sort-list-link">По цене</a></li>
+            <li class="products__sort-list-item"><a href="#" class="products__sort-list-link products__sort-list-link_active">По цене</a></li>
             <li class="products__sort-list-item"><a href="#" class="products__sort-list-link">По типу</a></li>
             <li class="products__sort-list-item"><a href="#" class="products__sort-list-link">По популярности</a></li>
           </ul>
