Pixel perfect again :\

--- a/catalog.html
+++ b/catalog.html
@@ -163,7 +163,7 @@
           <article class="products__items-item">
             <h2 class="visually-hidden">Любительская селфи-палка</h2>
             <figure class="products__items-item-container">
-              <img src="img/item-1.jpg" width="360" height="380" alt="Любительская селфи-палка">
+              <img class="products__items-item-image" src="img/item-1.jpg" width="360" height="380" alt="Любительская селфи-палка">
               <figcaption class="products__items-item-description">
                 <a href="#" class="products__items-item-link">Любительская селфи-палка</a>
                 <span class="products__items-item-price">500 руб.</span>
@@ -177,7 +177,7 @@
           <article class="products__items-item">
             <h2 class="visually-hidden">Профессиональная селфи-палка</h2>
             <figure class="products__items-item-container">
-              <img src="img/item-2.jpg" width="360" height="380" alt="Профессиональная селфи-палка">
+              <img class="products__items-item-image" src="img/item-2.jpg" width="360" height="380" alt="Профессиональная селфи-палка">
               <figcaption class="products__items-item-description">
                 <a href="#" class="products__items-item-link">Профессиональная селфи-палка</a>
                 <span class="products__items-item-price">1 500 руб.</span>
@@ -191,7 +191,7 @@
           <article class="products__items-item">
             <h2 class="visually-hidden">Непотопляемая селфи-палка</h2>
             <figure class="products__items-item-container">
-              <img src="img/item-3.jpg" width="360" height="380" alt="Непотопляемая селфи-палка">
+              <img class="products__items-item-image" src="img/item-3.jpg" width="360" height="380" alt="Непотопляемая селфи-палка">
               <figcaption class="products__items-item-description">
                 <a href="#" class="products__items-item-link">Непотопляемая селфи-палка</a>
                 <span class="products__items-item-price">2 500 руб.</span>
@@ -205,7 +205,7 @@
           <article class="products__items-item products__items-item_new">
             <h2 class="visually-hidden">Селфи-палка «Следуй за мной»</h2>
             <figure class="products__items-item-container products__items-item-container_new">
-              <img src="img/item-4.jpg" width="360" height="380" alt="Селфи-палка «Следуй за мной»">
+              <img class="products__items-item-image" src="img/item-4.jpg" width="360" height="380" alt="Селфи-палка «Следуй за мной»">
               <figcaption class="products__items-item-description">
                 <a href="#" class="products__items-item-link">Селфи-палка «Следуй за мной»</a>
                 <span class="products__items-item-price">4 900 руб.</span>
